# bidding-intelligence-system

./: .env.docker  .env.example  .env.lan  .env.template  .gitignore  ACHIEVEMENT_SUMMARY.txt  AICHATPANEL_FIX_SUMMARY.md  AI_ASSISTANT_RULES.md  ARCHITECTURE_OVERVIEW.md  BROWSER_VERIFICATION_GUIDE.md  CHANGELOG.md  CHANGE_MANAGEMENT.sh  CODE_PROTECTION.md  CODE_PROTECTION_IMPLEMENTATION.md  CODE_PROTECTION_QUICKSTART.md  COMPLETE_SYSTEM_CHECK.md  COMPLETION_SUMMARY.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  CRITICAL_FILE_DISPLAY_FIXES.md  CRITICAL_FIXES_REPORT.md  CURRENT_STATUS_AND_VALIDATION.md  DATA_STORAGE_ARCHITECTURE.md  DEEP_CHECK_REPORT.md  DEEP_FIX_VERIFICATION_REPORT.md  DEEP_OPTIMIZATION_PLAN.md  DEEP_VALIDATION_REPORT.md  DELIVERY_REPORT.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_READY.md  DEPLOYMENT_REFERENCE.md  DOCKER_GUIDE.md  DOCKER_PRINCIPLES.md  DOCS_INDEX.md  DOCUMENTATION_INDEX.md  DOCUMENT_PROCESSING_SYSTEM_COMPLETE.md  ENVIRONMENT_SNAPSHOT.md  EXPERT_OPTIMIZATION_IMPLEMENTATION.md  FILE_MANAGEMENT_LOGIC.md  FILE_STORAGE_ANALYSIS.md  (+184 more)
.github/: COPILOT_MEMORY.md  copilot-instructions.md
backend/: .dockerignore  .env.example  Dockerfile  FILE_PROCESSING_STRATEGY.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_GUIDE.md  README.md  SSD_STORAGE_CONFIG.md  VERIFICATION_REPORT.md  check_archive_files.py  check_knowledge.py  check_system.py  check_system_readiness.py  cleanup_orphaned.py  compare_parsing.py  create_test_docx.py  database_optimization.sql  debug_mcp.py  diagnose_two_issues.py  enhanced_database.py  fix_stuck_files.py  init_database.py  init_database.sql  init_ssd_system.sh  integrated_parser_with_tracking.py  main.py  monitor_upload.py  quick_validate.sh  reparse_preview.py  requirements.snapshot.txt  requirements.txt  start.sh  tasks.py  test_bidding_doc.txt  test_consistency.py  test_document_processing.py  test_enhanced_features.py  test_expert_system.py  test_final_verification.py  (+20 more)
frontend/: README.md  (+16 more)
(+163 files in other folders)
